# capstone_rag_project

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PRD_XBRL_LOADER.md  PROJECT_CONTEXT.md  README.md  aapl_2021.html_raptor_tree.json  ingestion_filings.py  pyproject.toml  start_db.sh  test_patents.py
.claude/: settings.local.json
.cursor/: rules
Filings/: __init__.py  chunking.py  config.yaml  config_loader.py  ingestion.py  pipeline.py  raptor.py  raptor_retrieval.py  raptor_verification.py
data/: aapl_10-k.json  aapl_10-k_subsidiaries.json  aapl_10-q.json  aapl_8-k_docling.json  aapl_def14a_board_members.json  msft_10-q.json  nvda_10-q.json  patents.csv  patents_2021_2025.csv
docs/: architecture.md  bigquery-audit-setup.md  eval-ui-spec.md  gcp-local-setup.md  knowledge_graph_documentation.docx
evals/: runner.py
evals/configs/: ablation_configs.py
evals/dataset/: golden_queries.json
evals/metrics/: due_diligence.py  gemini_judge.py  retrieval.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package.json
src/: api.py  app.py  eval_api.py  graph.py  graph_retrieval.py  model_config.py  observability.py  state.py  tiering.py
tests/: test_app_cache.py  test_error_handling.py  test_evals.py  test_filings_ingestion.py  test_filings_pipeline.py  test_filings_retrieval.py  test_generator.py  test_graph_retrieval.py  test_hybrid.py  test_kg.py  test_logger.py  test_observability.py  test_planner.py  test_retriever.py  test_router.py  test_secrets.py  test_transcripts.py  test_xbrl_loader.py
xbrl/: loader.py  main.py  normalizer.py  parser.py
(+111 files in other folders)
