[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ma-oracle"
version = "0.1.0"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.4",
    "tenacity>=9.1.4",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dateutil>=2.9.0",
    "litellm>=1.83.9",
    "google-auth>=2.49.2",
    "google-genai>=1.73.1",
    "pinecone>=8.1.2",
    "python-dotenv>=1.0.1",
    "google-cloud-secret-manager>=2.27.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
